# open-media-tracker

./: Cargo.toml  README.md  ROADMAP.md  TODO.md  justfile
src/: config.rs  dialog.rs  episdoe_list.rs  episdoes.rs  episode.rs  error.rs  loading.rs  main.rs  media.rs  media_list.rs  message.rs  open.rs  read_dir.rs  serial.rs  series.rs  utils.rs  view_utils.rs
src/dialogs/: error_dialog.rs  main_window.rs  mod.rs  serial_edit_dialog.rs
src/episode/: episdoe_list.rs  episode.rs  mod.rs
src/gui/: alias.rs  button.rs  confirm.rs  dialog.rs  error.rs  icon.rs  list.rs  loading.rs  main.rs  mod.rs  screen.rs  serial_edit.rs  series_edit.rs  utils.rs  warning.rs
src/gui/app/: confirm_kind.rs  kinds.rs  loading_kind.rs  message.rs  mod.rs  screens.rs
src/gui/dialog/: confirm.rs  dialog.rs  dialog_with_kind.rs  have_kind.rs  loading.rs  mod.rs  traits.rs
src/gui/main/: confirm_kind.rs  screens.rs
src/gui/page/: confirm.rs  error.rs  loading.rs  main.rs  mod.rs  warning.rs
src/gui/page/media_edit/: kind.rs  message.rs  mod.rs
src/gui/screen/: confirm.rs  error.rs  loading.rs  main.rs  mod.rs  series_edit.rs  warning.rs
src/gui/screen/media_edit/: error.rs  kind.rs  message.rs  mod.rs  screen.rs
src/gui/screen/series_edit/: kind.rs  message.rs  mod.rs  screen.rs
src/media/: media.rs  media_list.rs  mod.rs
src/model/: config.rs  episode.rs  episode_list.rs  episodes.rs  error.rs  loaded_data.rs  loading.rs  maybe_error.rs  media.rs  media_handler.rs  media_list.rs  mod.rs  placeholder.rs  user_path.rs
src/model/episode/: episode_list.rs  mod.rs
src/model/media/: handler.rs  media.rs  media_list.rs  mod.rs
src/screen/: confirm.rs  error.rs  main.rs  mod.rs  serial_edit.rs  warning.rs
src/serial/: mod.rs  model.rs  viewmodel.rs
src/utils/: mod.rs  next_dir.rs  open.rs  read_dir.rs
