[package]
name = "open_media_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
mime_guess = "2.0.5"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
fs-err = "3.1.1"
etcetera = "0.10.0"
serde_json = "1.0.140"
fuzzy-matcher = "0.3.7"
async-io = "2.4.1"
tokio = "1.45.1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["winit", "wgpu", "xdg-portal", "tokio"]

[dependencies.derive_more]
version = "2.0.1"
features = ["deref", "deref_mut", "display", "from"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = "symbols"
panic = "abort"
