[package]
name = "open_media_tracker"
version = "0.1.0"
edition = "2024"

[features]
embed_icons = []

[dependencies]
mime_guess = "2.0.5"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
fs-err = { version = "3.1.1", features = ["tokio"] }
etcetera = "0.10.0"
serde_json = "1.0.140"
fuzzy-matcher = "0.3.7"
async-io = "2.4.1"
tokio = { version = "1.45.1", features = ["fs"] }
url = "2.5.4"
chrono = { version = "0.4.41", features = ["serde"] }

[dependencies.derive_more]
version = "2.0.1"
features = ["deref", "deref_mut", "display", "from"]

[target.'cfg(unix)'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "12317d8103c34d66f005ee868df578abe693c84a"
default-features = false
features = ["winit", "wgpu", "tokio", "xdg-portal"]

[target.'cfg(windows)'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "12317d8103c34d66f005ee868df578abe693c84a"
default-features = false
features = ["winit", "wgpu", "tokio", "rfd"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = "symbols"
panic = "abort"
