[package]
name = "open_media_tracker"
version = "0.1.0"
edition = "2024"

[features]
embed_icons = []

[dependencies]
mime_guess = "2.0.5"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
fs-err = { version = "3.1.1", features = ["tokio"] }
etcetera = "0.10.0"
serde_json = "1.0.140"
fuzzy-matcher = "0.3.7"
tokio = { version = "1.46.1", features = ["fs"] }
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
env_logger = "0.11.8"

[dependencies.derive_more]
version = "2.0.1"
features = ["deref", "deref_mut", "display", "from"]

[target.'cfg(unix)'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["winit", "wgpu", "tokio", "xdg-portal"]

[target.'cfg(windows)'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["winit", "wgpu", "tokio", "rfd"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = "symbols"
panic = "abort"
